--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,23 +1,15 @@
-{% extends 'product/base.html' %}
+{% extends 'product/main.html' %}
 {% load static %}
 {% block body %}
-<div class="m-3 message">
-  {% if messages %}
-    <ul class="messages">
-      {% for message in messages %}
-      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-      {% endfor %}
-  </ul>
-  {% endif %}
-</div>
-  <main class="mt-5 pt-4">
-    <div class="container dark-grey-text mt-5">
-      <div class="row wow fadeIn">
-        <div class="col-md-6 mb-4">
-              <img src="{{product.imageURL}}" class="img-fluid" alt="">
+
+
+<div class="container mt-5 mb-5">
+  <div class="row">
+        <div class="col">
+              <img src="{{product.image.url}}" class="col img-fluid img-thumbnail"  alt="">
         </div>
-        <div class="col-md-6 mb-4">
-          <div class="p-4">
+
+        <div class="col align-self-center">
             <p class="lead font-weight-bold">{{product}}</p>
             <p class="lead">
                   <span class="mr-1">
@@ -32,10 +24,9 @@
               </button>
             </form>
             
-          </div>
         </div>
-      </div>
-    </div>
-  </main>
+
+  </div>
+  </div>
   {% endblock body %}
   
