--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -1,8 +1,11 @@
-{% extends 'product/base.html' %}
+{% extends 'product/main.html' %}
 {% load static %}
 {% block body %}
+<div class="container mt-5 mb-5">
+	<div class="row">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<div class="col-lg-12">
+		
+<div class="col-lg-12">
 			<div class="box-element">
 				
 				{% if items %}
@@ -10,8 +13,6 @@
 				<br>
 				<br>
 				{% endif %}
-					
-
 
 				<table class="table">
 					<tr>
@@ -26,6 +27,8 @@
 			</div>
 
 			<br>
+			
+			
 			<div class="box-element">
 				<div class="cart-row">
 					<div style="flex:2"></div>
@@ -35,9 +38,10 @@
 					<div style="flex:1"><strong>Total</strong></div>
 					<div style="flex:1"><strong></strong></div>
 				</div>
+				{% if items %}
 				{% for item in items %}
 				<div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+					<div style="flex:2"><img class="thumbnails" src="{{item.product.imageURL}}"></div>
 					<div style="flex:2"><p><a href="{{item.product.get_absolute_url}}">{{item.product.name}}</a></p></div>
 					<div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
 					<div style="flex:1">
@@ -56,13 +60,18 @@
 							Trash
 						</button>
 					</div>
-				</div>
-				{% empty %}
-					<div class="col-sm-12 empty-cart-cls text-center"> <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid mb-4 mr-3">
-						<h3><strong>Your Cart is Empty</strong></h3>
-						<h4>Add something to make me happy :)</h4> <a href="{% url 'products:store' %}" class="btn btn-outline-dark cart-btn-transform m-3" data-abc="true">continue shopping</a>
-					</div>			
+				</div>			
 				{% endfor %}
+			{% else %}
+			<div class="col-sm-12 empty-cart-cls text-center"> <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+				<h3><strong>Your Cart is Empty</strong></h3>
+				<h4>Add something to make me happy :)</h4> <a href="{% url 'products:store' %}" class="btn btn-outline-dark cart-btn-transform m-3" data-abc="true">continue shopping</a>
+			</div>	
+			{% endif %}
+				
+
 			</div>
+		</div>
+		</div>
 		</div>
 {% endblock body %}
