--- a/product/templates/product/checkout.html
+++ b/product/templates/product/checkout.html
@@ -1,6 +1,7 @@
-{% extends 'product/base.html' %}
+{% extends 'product/main.html' %}
 {% load static %}
 {% block body %}
+<div class="container mt-5 mb-5">
      <div class="row">
 		<div class="col-lg-6">
 			<div class="box-element" id="form-wrapper">
@@ -44,7 +45,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id="make-payment">Make payment</button>
+				<!-- <button id="make-payment">Make payment</button> -->
+
 				<div id="paypal-button-container"></div>
 			</div>
 			
@@ -58,7 +60,7 @@
 				<hr>
 				{% for item in items %}
 				<div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+					<div style="flex:2"><img class="row-image thumbnails" src="{{item.product.imageURL}}"></div>
 					<div style="flex:2"><p>{{item.product.name}}</p></div>
 					<div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
 					<div style="flex:1"><p>x{{item.quantity}}</p></div>
@@ -69,10 +71,47 @@
 			</div>
 		</div>
 	</div>
+
+    <script src="https://www.paypal.com/sdk/js?client-id=Ae-y6uwiDiHWHf5IihwngLLv3rX8JSKMv8psl5hol1BPtKfsRtzK2kjiMUAXugenDk_NIpxSFyz7ovT1&currency=USD&disable-funding=credit"></script>
+
+
+
+<script>
+	var total = '{{order.get_cart_total}}'
+	// Render the PayPal button into #paypal-button-container
+	paypal.Buttons({
+
+		style:{
+			color:'blue',
+			shape:'rect',
+
+		},
+		// Set up the transaction
+		createOrder: function(data, actions) {
+			return actions.order.create({
+				purchase_units: [{
+					amount: {
+						value: parseFloat(total).toFixed(2)
+					}
+				}]
+			});
+		},
+
+		// Finalize the transaction
+		onApprove: function(data, actions) {
+			return actions.order.capture().then(function(details) {
+				submitFormData()
+			});
+		}
+
+
+	}).render('#paypal-button-container');
+</script>
+
 <script type="text/javascript">
     var shipping = '{{order.shipping}}'
     var user = '{{request.user}}'
-    var total = '{{order.get_cart_total|floatformat:2}}'
+    
 
     if(shipping == 'False'){
         document.getElementById('shipping-info').innerHTML=''
@@ -95,59 +134,69 @@
         document.getElementById('payment-info').classList.remove('hidden')
 
     })
-    
+   /* 
     document.getElementById('make-payment').addEventListener('click', function(e){
         submitFormData()
     })
+   */
 
     function submitFormData(){
-        console.log('payment button cklicked ...')
-        var userFormData = {
-            'name':null,
-            'email':null,
-            'total':total,
-        }
-        var shippingInfo = {
-            'address':null,
-            'city':null,
-            'state':null,
-            'zipcode':null,
-        }
+	    	console.log('Payment button clicked')
 
-        if(shipping != 'False'){
-            shippingInfo.address=form.address.value
-            shippingInfo.city=form.city.value
-            shippingInfo.state=form.state.value
-            shippingInfo.zipcode=form.zipcode.value
-        }
+	    	var userFormData = {
+				'name':null,
+				'email':null,
+				'total':total,
+			}
 
-        if(user == 'AnonymousUser'){
-            userFormData.name = form.name.value
-            userFormData.email = form.email.value 
-        }
+			var shippingInfo = {
+				'address':null,
+				'city':null,
+				'state':null,
+				'zipcode':null,
+			}
 
-        var url = '/products/process_order/'
+			if (shipping != 'False'){
+	    		shippingInfo.address = form.address.value
+		    	shippingInfo.city = form.city.value
+		    	shippingInfo.state = form.state.value
+		    	shippingInfo.zipcode = form.zipcode.value
+	    	}
 
-        fetch(url,{
-            method :'POST',
-            headers:{
-                'Content-Type':'application/json',
-                'X-CSRFToken':csrftoken,
-            },
-            body:JSON.stringify({'form':userFormData, 'shipping': shippingInfo})
-        })
-        .then((response)=>{
-            return response.json();
-        })
-        .then((data)=>{
-            console.log('success:',data);
-			alert('Transaction Completed');
-            window.location.href = "{% url 'products:store' %}"
+	    	if (user == 'AnonymousUser'){
+				
+	    		userFormData.name = form.name.value
+	    		userFormData.email = form.email.value
+	    	}
+
+	    	console.log('Shipping Info:', shippingInfo)
+	    	console.log('User Info:', userFormData)
+
+	    	var url = "/products/process_order/"
+	    	fetch(url, {
+	    		method:'POST',
+	    		headers:{
+	    			'Content-Type':'applicaiton/json',
+	    			'X-CSRFToken':csrftoken,
+	    		}, 
+	    		body:JSON.stringify({'form':userFormData, 'shipping':shippingInfo}),
+	    		
+	    	})
+	    	.then((response) => response.json())
 			
-        })
-    }
+	    	.then((data)=>{
+				console.log('Success:', data);
+				alert('Transaction completed');  
 
+				cart = {}
+				document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+
+				window.location.href = "{% url 'products:store' %}"
+
+				})
+	    }
 
 </script>
-
+	</div>
+	</div>
 {% endblock body %}
