--- a/product/templates/product/main.html
+++ b/product/templates/product/main.html
@@ -25,21 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <!-- <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li> -->
 
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Categories
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li> -->
         </ul>
         <a href="{% url 'products:liked_product' %}">
         <button data-product="{{product.id}}" data-action="add"
@@ -54,18 +40,15 @@
         </form>
         
         <ul class="navbar-nav">
-
-
+          
+          {% if user.is_authenticated %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {% if user.is_authenticated %}
                <strong class="text-light">{{ user.customer }}</strong>
-              {% else %}
-                  Login
-              {% endif %}
+
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="{% url 'accounts:profile' user.customer %}">View Profil</a>
               <a class="dropdown-item" href="#">Edit Profil</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">My Orders</a>
@@ -74,6 +57,14 @@
               <a class="dropdown-item" href="#">Change Password</a>
             </div>
           </li>
+          {% else %}
+          <li class="nav-item mt-2 ml-5">
+            <strong class="text-light">Login</strong>
+          </li>
+          
+        {% endif %}
+
+
             <li class="nav-item active mt-1">
               
               <div class="form-inline my-2 my-lg-0">
@@ -88,8 +79,7 @@
     </nav>
 
 
-<div class="container mt-5 mb-5">
-  <div class="row">
+
 
   {% block body  %}
     
@@ -97,19 +87,16 @@
 
 
   {% endblock body %}
-</div>
-</div>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    
+    <script src="{% static 'js/fontawesome-all.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/jquery-3.3.1.slim.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/fontawesome-all.min.js' %}"></script>  
+
     <script src="{% static 'js/cart.js' %}"></script>
     <script src="{% static 'js/like.js' %}"></script>   
-    <script src="{% static 'js/popper.min.js' %}"></script>
+   
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -142,7 +129,35 @@
 		    }
 		    return cookieValue;
 		}
-		var csrftoken = getToken('csrftoken')
+		var csrftoken = getToken('csrftoken');
+    
+    function getCookie(name) {
+		    // Split cookie string and get all individual name=value pairs in an array
+		    var cookieArr = document.cookie.split(";");
+
+		    // Loop through the array elements
+		    for(var i = 0; i < cookieArr.length; i++) {
+		        var cookiePair = cookieArr[i].split("=");
+
+		        /* Removing whitespace at the beginning of the cookie name
+		        and compare it with the given string */
+		        if(name == cookiePair[0].trim()) {
+		            // Decode the cookie value and return
+		            return decodeURIComponent(cookiePair[1]);
+		        }
+		    }
+
+		    // Return null if not found
+		    return null;
+		}
+		var cart = JSON.parse(getCookie('cart'))
+
+		if (cart == undefined){
+			cart = {}
+			console.log('Cart Created!', cart)
+			document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+		}
+		console.log('Cart:', cart)
     </script>
 
   </body>
