--- a/product/templates/product/store.html
+++ b/product/templates/product/store.html
@@ -64,7 +64,7 @@
                   <i class="fas fa-heart"></i> <small>{{product.likeNumber}}</small>
                   </button> 
                   {% endif %}
-            <h4 style="display: inline-block; float: right"><strong>${{product.price}}</strong></h4>
+            <h4 style="display: inline-block; float: right;font-size:20px"><strong>${{product.price}}</strong></h4>
     
           </div>
         </div>
